Sutter Health/src/objects/AQRS_Provider_Attribute__mdt.object
<CustomObject>
    <fields>
        <fullName>Department_Id__c</fullName>
        <description>Department Id</description>
        <label>Department Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Department_Mnemonic__c</fullName>
        <description>Department Mnemonic</description>
        <label>Department Mnemonic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <description>Department Name</description>
        <label>Department Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Division_Id__c</fullName>
        <description>Division Id</description>
        <label>Division Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Division_Mnemonic__c</fullName>
        <description>Division Mnemonic</description>
        <label>Division Mnemonic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Division_Name__c</fullName>
        <description>Division Name</description>
        <label>Division Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Facility_Id__c</fullName>
        <description>Facility Id</description>
        <label>Facility Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Facility_Mnemonic__c</fullName>
        <description>Facility Mnemonic</description>
        <label>Facility Mnemonic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <description>Facility Name</description>
        <label>Facility Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Foundation_Id__c</fullName>
        <description>Foundation Id</description>
        <label>Foundation Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Foundation_Mnemonic__c</fullName>
        <description>Foundation Mnemonic</description>
        <label>Foundation Mnemonic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Foundation_Name__c</fullName>
        <label>Foundation Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Master_Provider_Key__c</fullName>
        <description>Master Provider Key</description>
        <label>Master Provider Key</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NPI__c</fullName>
        <description>NPI</description>
        <label>NPI</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Id__c</fullName>
        <description>Provider Id</description>
        <label>Provider Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <description>Provider Name</description>
        <label>Provider Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <description>Specialty</description>
        <label>Specialty</label>
        <type>TextArea</type>
    </fields>
    <label>AQRS Provider Attribute</label>
    <pluralLabel>AQRS Provider Attributes</pluralLabel>
</CustomObject>